--- a/이것이 취업을 위한 컴퓨터 과학이다/5. Network/mj/CH05_네트워크.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/5. Network/mj/CH05_네트워크.md
@@ -916,3 +916,707 @@
 - cf) `CLOSING` 상태
   - 서로가 FIN 세그먼트를 보내고 받은 뒤, 각자 그에 대한 ACK 세그먼트를 보냈지만, 아직 자신의 FIN 세그먼트에 대한 ACK 세그먼트를 받지 못했을 때
   - 다음과 같이 양쪽이 동시에 연결 종료를 요청하고 서로의 종료 응답을 기다릴 경우에 발생하는 상태
+
+# 5. 응용 계층 - HTTP의 기초
+
+## DNS와 URI/URL
+
+- HTTP를 이해하려면 도메인 네임 관련 프로토콜인 DNS와 자원개념, 이를 식별하기 위한 정보인 URI에 대해 이해해야한다!
+
+### 도메인 네임과 DNS
+
+- IP주소는 뭐였지?
+    - 네트워크 상의 호스트를 식별하기 위해 기본적으로 사용
+    - 하지만, IP주소로만으로는 특정 호스트의 특징을 나타내기 어렵고, 호스트의 IP주소는 언제든 바뀔 수 있다.
+    - 그래서 사용하는 것이 `도메인 네임!`
+        - www.google.com과 같은 문자열 형태의 호스트 특정 정보
+        - 호스트의 IP주소와 대응
+- 도메인 네임과 대응하는 IP주소는 `네임서버`에서 관리된다.
+도메인 네임을 관리하는 네임서버는 `DNS 서버`라고도 부른다.
+    - **호스트는 네임 서버에 특정 도메인 네임을 가진 호스트의 IP 주소가 무엇인지 질의함으로써, 패킷을 주고받고자 하는 호스트의 IP주소를 얻어낼 수 있다.**
+    - 이렇게 IP주소를 모르는 상태에서 도메인 네임에 대응되는 IP주소를 알아내는 과정 → 도메인 네임을 풀이한다, resolving한다고 표현한다.
+
+### 도메인 네임의 계층적 구조
+
+- .을 기준으로 계층적 분류
+    - `3단계 도메인 < 2단계 도메인 < 최상위 도메인 < 루트 도메인`
+    - 예시) www.example.com.
+- 루트도메인(최상단: Root Domain) → 최상위 도메인(TLD : Top-Level Domain)
+    - 도메인 네임의 마지막 부분에 .으로 표현되는 루트 도메인도 도메인 네임의 일부이지만, 생략하기 때문에 최상위 도메인을 도메인 네임의 마지막 부분으로 간주해 ‘최상위’라고 표현
+- 도메인 단계는 더 늘어날 수 있지만 보통 3~5단계로 구성
+- **전체 주소 도메인** (Fully-Qualified Domain Name)
+    - www.example.com.처럼 도메인 네임을 모두 포함하는 도메인 네임
+    - `FQDN`을 알면 호스트를 식별할 수 있다
+- 서브 도메인
+    - 다른 도메인이 포함된 도메인
+    - Ex) mail.examle.com, www.example.com, developer.example.com은 모두 exmaple.com의 서브도메인
+
+### 도메인 네임을 관리하는 네임 서버의 계층적 구조
+
+- 계층적인 형태로 이뤄진 도메인을 관리하는 네임 서버 또한 계층적인 형태
+- 네임 서버는 여러 개, 전 세계 여러 곳에 위치, 분산되어 관리됨
+
+→ `도메인 네임 시스템(DNS)` - 계층적으로 분산되어 있는 도메인 네임 관리체계
+
+![image.png](attachment:43b4717d-844a-4166-af49-8dcb9c11d20a:image.png)
+
+- **도메인 네임에 대응되는 IP 주소를 알아내는 과정**
+    - 호스트는 가장 먼저 `로컬 네임 서버`에게 도메인 네임을 질의
+        - 로컬 네임 서버는 클라이언트와 맞닿아 있는 네임 서버
+    - **클라이언트가 로컬 네임 서버를 찾기 위해선** 로컬 네임 서버의 주소를 알고 있어야 함
+        - 그래서 ISP가 로컬 네임 서버의 주소를 자동으로 할당해줌
+        - ISP에서 할당해주는 로컬 네임 서버 주소가 아닌 공개 DNS 서버를 이용할 수도 있음 (구글의 8.8.8.8, 8.8.4.4)
+    - 로컬 네임 서버가 FQDN에 해당하는 IP 주소를 알고 있다면??
+        - 클라이언트에게 즉시 해당 IP 주소를 반환
+    - 만일 로컬 네임 서버가 IP주소를 모른다면??
+        - FQDN에 대응하는 주소를 알아낼 때까지 도메인 네임의 루트 도메인을 관장하는 서버(**루트 네임 서버**), 최상위 도메인을 관장하는 서버(**TLD 네임 서버**), 그 하위 레벨의 도메인 네임을 관장하는 서버(**네임 서버**), 차례대로 **질의를 반복**
+            
+            > 질의 과정이 너무 많이 반복되면, 네트워크 내 트래픽이 많아지고, 리졸빙에 지나 치게 오랜 시간이 걸리기 때문에 네임 서버들이 기존에 응답받은 결과를 임시로 저장했다 가 추후 같은 질의에 활용하는 경우가 많음 → `DNS 캐시`
+            > 
+    - 최종적으로 클라이언트가 원하는 IP 주소를 받으면 해당 주소를 클라이언트에게 전달
+
+cf) DNS 레코드
+
+- 클라이언트가 IP 주소가 아니라 도메인 네임을 통해 서버와 상호작용할 수 있도록 하려면 어떻게 해야 할까요? 가장 먼저 해야 할 일은 도메인 네임을 구입하는 것입니다. 도메인 네임은 각종 DNS 서비스 업체에서 구매할 수 있으며, 해당 업체들은 많은 경우 네임 서버를 운영합니다.
+- 구입한 도메인 네임이 여러분의 서버 IP 주소에 대응된다는 사실을 네임 서버에 알리지 않으면 네임 서버는 당연히 그 사실을 알 수 없습니다.
+- 따라서 IP 주소에 도메인 네임을 대응 하기 위해서는 **네임 서버에 도메인 네임 관련 설정 정보를 추가**해야 합니다. 이때 추가하는 정보가 바로 DNS 자원 레코드(DNS resource record)입니다.
+- DNS 레코드에는 기본적으로 이름(Record name)과 그에 대응하는 값(Value)이 있으며, 그 <이름, 값> 쌍 의 유형을 나타내는 레코드 타입(Record type)도 포함
+
+### 자원과 URI/URL
+
+- 자원: 네트워크 상의 메시지를 통해 주고받는 최종 대상을 의미 (ex. html파일, 이미지/동영상/텍스트 파일)
+- `URI`: 웹 상에서의 자원을 식별하기 위한 정보
+    - Uniform Resource Identifier
+    - ‘이름’ 기반으로 하는지, ‘위치’를 기반으로 하는지에 따라 `URN`(Uniform Resource Name), `URL`(Uniform Resource Locator)로 구분한다.
+- `URL`
+    
+    ![image.png](attachment:512119c0-f32a-4786-8e48-bc073763e3bf:image.png)
+    
+    1. **scheme**
+        - 자원에 접근하는 방법
+        - 일반적으로 사용할 프로토콜 (http, https)
+    2. **authority**
+        - 호스트를 특정할 수 있는 IP 주소나 도메인 네임
+        - :뒤에 번호명시 가능
+    3. **path**
+        - 자원이 위치하고 있는 경로
+    4. **query**
+        - URL에 대한 매개변수 역할을 하는 문자열 (쿼리 문자열, 쿼리 파라미터)
+    5. **fragment**
+        - 자원의 일부분, 자원의 한 조각을 가리키기 위한 정보
+        - HTML 파일과 같은 자원에서 특정 부분을 가리키는 데 사용
+            
+            (**a**) https://datatracker.ietf.org/doc/html/rfc3986
+            (**b**) https://datatracker.ietf.org/doc/html/rfc3986#section-1.1.2
+            
+- cf) URL
+    - 자원의 위치가 변하면 URL은 유효하지 않는 반면, URN은 자원에 고유한 이름을 붙이는 이름 기반의 식별자이기 때문에 자원의 위치와 무관하게 자원을 식별할 수 있다는 장점이 있다.
+
+## HTTP의 특징
+
+목적: 애플리케이션의 다양한 자원을 네트워크를 통해 송수신
+
+1. **요청 응답 기반 프로토콜**
+    - 클라이언트(요청 메시지 보내고)와 서버(응답 메시지를 보내고)가 주고받는 구조
+2. **미디어 독립적 프로토콜**
+    - 주고받을 자원의 특성과 무관하게 자원을 주고받는 수단(인터페이스)의 역할만 수행
+    - 미디어 타입(주고받는 자원의 종류)에 특별한 제한을 두지 않고, 독립적으로 작동이 가능
+        - 미디어타입 → MIME 타입(Multipurpose Internet Mail Extensions Type)라고도 부름
+        - 타입/서브타입의 형식
+            - 타입: 데이터 유형
+            - 서브타입: 주어진 타입에 대한 세부 유형
+        - ex) */*는 모든 미디어타입을 의미
+3. **스테이트리스(stateless) 프로토콜**
+    - 서버는 HTTP 요청을 보낸 클라이언트 관련 상태를 기억하지 않는다
+        
+        <aside>
+        💡
+        
+        상태를 유지하지 않는 이유는?
+        
+        모든 클라이언트의 상태 정보를 유지하는 것은 서버에 큰 부담이 됩니다. 또 서버는 여러 대로 구성될 수도 있는데, 여러 대로 구성된 서버 모두가 모 든 클라이언트의 상태를 유지해야 한다면 어쩔 수 없이 모든 서버가 모든 클라이언트의 상태 정보를 공유해야 합니다. 하지만 이는 매우 번거롭고 복잡한 작업입니다.
+        
+        </aside>
+        
+    - HTTP 서버: **확장성과 견고성**
+        - 상태를 유지하지 않고 모든 요청을 독립적인 요청으로 처리하기 때문에,
+        - 언제든 쉽게 서버를 추가할 수 있어 **확장성**을 높이고, 서버 중 하나에 문제가 생기더라도 쉽게 다른서버로 대체 할수있어 견고성을 높임
+4. **지속 연결 프로토콜**
+    - **초기 HTTP (1.0 이하)**
+        - 비연결형 프로토콜 → 매 요청마다 TCP 연결 수립과 종료 필요
+        - **비지속 연결(non-persistent connection):** 매번 새롭게 연결 수립/종료
+    - **HTTP 1.1 이상**
+        - **지속 연결(persistent connection, keep-alive)** 지원
+        - 하나의 TCP 연결에서 여러 요청-응답 처리 가능 → 속도 향상
+        
+        ![image.png](attachment:3f002608-62e1-4ee2-a396-70f557dff9c7:image.png)
+        
+    
+    <aside>
+    💡
+    
+    [HTTP 버전별 특징]
+    
+    **HTTP 1.1**
+    
+    - 현재까지 널리 사용됨.
+    - **지속 연결(persistent connection, keep-alive)** 지원 
+    → 한 TCP 연결에서 여러 요청-응답 가능.
+    - **평문 기반** 메시지 전송.
+    - 콘텐츠 협상, 다양한 편의 기능 추가.
+    
+    **HTTP 2.0**
+    
+    - HTTP 1.1 단점 보완.
+    - **바이너리 데이터 기반 송수신**: 메시지를 평문이 아닌 바이너리 형태로 송수신.
+    - **헤더 압축**: 네트워크 이용 효율 향상.
+    - **서버 푸시(server push)**: 클라이언트가 요청하지 않은 자원도 미리 전송.
+    - **멀티플렉싱(multiplexing)**: 여러 개의 독립적인 스트림(stream)을 바탕으로 여러 요청-응답을 병렬 처리 → HOL 블로킹 문제 완화.
+        - HOL(Head-Of-Line) 블로킹: 같은 큐에 대기하며 순차적으로 처리되는 여러 패킷이 있을 때, 첫 번째 패킷의 처리 지연으로 인해 나머지 패킷들의 처리도 모두 지연되는 문제 상황
+    
+    **HTTP 3.0**
+    
+    - 최신 버전, 점차 사용 확대.
+    - **UDP 기반(QUIC)** → TCP보다 빠른 송수신 → 속도개선
+    </aside>
+    
+
+## **HTTP 메시지 구조**
+
+- **| 시작 라인(start line)**, **필드 라인(header)**, **본문(body)**으로 구성됨.
+- **필드 라인**은 여러 개 존재 가능, **본문**은 선택적이며 전송되는 자원이 포함됨.
+
+### 시작 라인
+
+- 메시지가 요청인지 응답인지 구분 (요청 라인과 상태 라인으로 구분)
+    - 요청 → `요청 라인` = 메서드 (공백) 요청 대상 (공백) HTTP 버전 (줄바꿈)
+    응답 → `상태 라인` = HTTP 버전 (공백) 상태 코드 (공백) 이유 구문-선택적 (줄바꿈)
+    
+    ![image.png](attachment:e3bbb7c1-4a98-40b8-8875-fff32201f50b:image.png)
+    
+
+### 필드 라인
+
+- HTTP 헤더 (헤더 이름: 헤더 값)
+- 예시
+    
+    ```python
+    Content-Type: text/html
+    Content-Length: 648
+    ```
+    
+
+## **HTTP** 메서드와 상태 코드
+
+![image.png](attachment:d81f2c35-184a-49eb-80d5-6d0ccf72af4d:image.png)
+
+### HTTP 메서드
+
+![image.png](attachment:ad5946e9-0944-4200-a0c1-d0af18707f20:image.png)
+
+- 같은 URL이라도 메서드별 동작은 개발자가 설계 가능
+
+| 메서드 | 용도 | 특징/예시 |
+| --- | --- | --- |
+| **GET** | 자원 조회 | 요청 시 메시지 본문 없음
+ex. 웹 브라우저에서 페이지 조회 시 사용 |
+| **HEAD** | GET과 동일하지만 헤더만을 응답받음 (응답 메시지 본문 없음) | 헤더 정보만 확인 가능 |
+| **POST** | 보통 클라이언트가 서버에 새로운 자원 생성할 때 | 메시지 본문 포함
+성공 시 201 Created 응답 |
+| **PUT** | 기존 자원 **덮어쓰기** | 요청 본문으로 자원 전체를 대체 |
+| **PATCH** | 기존 자원 **부분 수정** | 요청 본문에 해당하는 부분만 수정 |
+| **DELETE** | 자원 삭제 | 특정 URL 자원 삭제 요청 |
+
+### HTTP 상태코드
+
+| 상태 코드 | 의미 | 대표 예시 |
+| --- | --- | --- |
+| **100~199** | 정보성 | Continue 등 |
+| **200~299** | 성공 | 200 OK
+201 Created
+202 Accepted
+204 No Content |
+| **300~399** | 리다이렉션 | 301/308 Permanent Redirect,
+302/307 Temporary Redirect, 303 See Other, 
+304 Not Modified |
+| **400~499** | 클라이언트 오류 | 400 Bad Request, 401 Unauthorized, 403 Forbidden, 404 Not Found, 405 Method Not Allowed |
+| **500~599** | 서버 오류 | 500 Internal Server Error, 502 Bad Gateway |
+- **리다이렉션**:
+    
+    ![image.png](attachment:196b7191-9295-402e-8e70-4e1f9a125521:image.png)
+    
+    - 영구적(Permanent, 301/308) → 기존 URL 더 이상 필요 없음
+        
+        
+        | 코드 | 설명 | 재요청 메서드 |
+        | --- | --- | --- |
+        | **301 Moved Permanently** | 자원이 **영구적으로 이동** | 원래 POST 요청도 **GET으로 바뀔 가능성 있음** → 오래된 브라우저 호환 문제 때문에 애매모호 |
+        | **308 Permanent Redirect** | 자원이 **영구적으로 이동** | 원래 메서드 **그대로 유지** → POST 요청이면 재요청도 POST |
+    - 일시적(Temporary, 302/303/307) → 기존 URL 여전히 유효
+        
+        
+        | 코드 | 설명 | 재요청 메서드 |
+        | --- | --- | --- |
+        | **302 Found** | 자원이 **임시로 이동** | POST → GET으로 바뀔 가능성 있음 |
+        | **303 See Other** | 자원이 **임시 이동, 반드시 GET 사용** | 항상 GET으로 재요청 |
+        | **307 Temporary Redirect** | 자원이 **임시 이동, 메서드 유지** | POST → POST 유지 |
+    - 메서드 변경 여부 확인 필요 (특히 POST 재요청 시 GET으로 변환 가능 여부)
+- **401 vs 403**
+    
+    ![image.png](attachment:eb634b40-1270-413e-a3af-68b212ed3ec4:image.png)
+    
+    - 인증(Authentication) 문제 → 401
+    권한(인가)(Authorization) 문제 → 403
+    - 인증이란 ‘자신이 누구인지를 증명하는 작업’을 의미하고, 
+    권한이란 ‘인증된 주체에게 허용된 작업’을 의미
+- **500번대**: 서버 문제, 대부분 Internal Server Error, 중간 서버 문제 시 Bad Gateway
+    
+    ![image.png](attachment:d653ab1f-7fed-4f35-887c-4071a997bf44:image.png)
+    
+
+## HTTP 주요 헤더
+
+> 빈번히 사용되는 HTTP 헤더의 의미를 기억해 두고, 새로운 헤더가 나올 때마다 그때 그때 정리해도 무방
+> 
+
+### 요청 메시지에서 주로 활용되는 **HTTP** 헤더
+
+| 헤더 | 설명 | 예시 |
+| --- | --- | --- |
+| **Host** | 요청을 보낼 서버 호스트 정보 | Host: [www.example.com](http://www.example.com/) |
+| **User-Agent** | 요청을 보낸 클라이언트 프로그램 정보(브라우저, OS, 렌더링 엔진 등) | User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/109.0 |
+| **Referer** | 요청을 보낸 페이지(유입 경로) URL | Referer: [https://minchul.net](https://minchul.net/) |
+
+### **응답 메시지에서 주로 사용하는 헤더**
+
+| 헤더 | 설명 | 예시 |
+| --- | --- | --- |
+| **Server** | 응답을 보낸 서버 정보 | Server: Apache/2.4.1 (Unix) |
+| **Allow** | 처리 가능한 HTTP 헤더 목록을 알리기 위해 사용
+(클라이언트가 사용할 수 있는 HTTP 메서드) | Allow: GET, POST |
+| **Location** | 자원의 위치(URL) 안내, 리다이렉션 시 사용 | Location: /new-resource |
+
+### 요청·응답 메시지에서 사용하는 헤더
+
+| 헤더 | 설명 | 예시 |
+| --- | --- | --- |
+| **Date** | 메시지 생성 시각 | Date: Tue, 15 Nov 1994 08:12:31 GMT |
+| **Content-Length** | 메시지 본문의 길이(바이트 단위) | Content-Length: 123 |
+| **Content-Type** | 메시지 본문의 미디어 타입 | Content-Type: text/html; charset=UTF-8 |
+| **Content-Language** | 메시지 본문의 언어 | Content-Language: ko-KR, en-US |
+| **Content-Encoding** | 본문 압축/변환 방식 | Content-Encoding: gzip, br |
+| **Connection** | 연결 방식 제어 (유지/종료) | Connection: keep-alive / close |
+
+# 6. 응용 계층 - HTTP의 응용
+
+> 쿠키, 캐시, 콘텐츠 협상, 인증, 보안으로 대표되는 각종 HTTP 기반의 다양한 기술
+> 
+
+## 쿠키
+
+> **쿠키**는 HTTP의 스테이트리스 특성을 보완하기 위한 대표적 수단
+> 
+- 서버에서 생성되어 클라이언트(주로 브라우저)에 저장되는 **<이름, 값> 쌍**의 데이터입니다.
+- 쿠키는 필요 시 **만료기간, 도메인, 경로, 보안 속성** 등 추가 속성을 가질 수 있습니다.
+- `쿠키 전송 과정`
+    1. **서버 → 클라이언트**: 응답 메시지의 `Set-Cookie` 헤더를 통해 쿠키 전송
+        
+        ```
+        Set-Cookie: name=minchul
+        Set-Cookie: phone=100-100; Expires=Fri, 23 Aug 2024 09:00:00 GMT
+        Set-Cookie: sessionID=abc123; Max-Age=2592000
+        ```
+        
+    2. **클라이언트 → 서버**: 요청 메시지의 `Cookie` 헤더로 저장된 쿠키 전송
+        
+        ```
+        Cookie: name=minchul; phone=100-100; sessionID=abc123
+        ```
+        
+    - 서버가 쿠키를 전달하면, 클라이언트는 **자동으로 다음 요청 시 같은 서버에 쿠키를 포함**하여 전송합니다.
+- 쿠키 추가 속성
+    
+    
+    | 속성 | 설명 |
+    | --- | --- |
+    | **Domain** | 쿠키를 전송할 도메인 지정 |
+    | **Path** | 쿠키를 전송할 경로 지정 |
+    | **Expires** | 쿠키 만료 시각 지정 (GMT 형식) |
+    | **Max-Age** | 쿠키 유효기간(초 단위) 지정 |
+    | **Secure** | HTTPS에서만 쿠키 전송 가능 |
+    | **HttpOnly** | JS 접근 제한, HTTP 송수신으로만 접근 가능 |
+
+### cf) 웹 스토리지
+
+> 로컬 스토리지와 세션 스토리지
+> 
+
+| 종류 | 설명 |
+| --- | --- |
+| **Local Storage** | 영구 저장, 브라우저 종료 후에도 유지 |
+| **Session Storage** | 세션 유지 동안 저장, 브라우저 종료 시 삭제 |
+
+<aside>
+💡
+
+- HTTP는 스테이트리스 → 상태 정보 필요 시 **쿠키**나 **웹 스토리지** 사용
+- **쿠키**: 서버와 클라이언트가 주고받으며 상태 유지
+- **웹 스토리지**: 클라이언트에서만 저장, 서버 전송 자동 X
+</aside>
+
+## 캐시
+
+> 응답받은 자원의 **사본을 임시 저장**하여 불필요한 대역 폭 낭비와 응답 지연을 방지하는 기술
+> 
+- 목적
+    - 서버로부터 받은 자원의 **사본을 임시 저장**하여 불필요한 대역폭 낭비와 응답 지연을 줄임.
+    - 예: 10MB 이미지 파일을 한 번 다운받아 **캐시**해 두면, 다음 요청 시 서버 재전송 없이 빠르게 접근 가능.
+
+| 구분 | 위치 | 설명 |
+| --- | --- | --- |
+| **개인 전용 캐시 (Private Cache)** | 클라이언트 브라우저 | 개인용, 서버 간 공유 X |
+| **공용 캐시 (Public Cache)** | 클라이언트와 서버 사이 중간 서버 | 여러 사용자가 공유 가능 |
+
+### 캐시 유효 기간
+
+- 유효기간 설정 방법: 응답메시지의 Expires 헤더와 Cache Control 헤더의 Max- Age 값
+    - `Expires` 헤더: 캐시 만료 시각 (GMT 형식)
+    - `Cache-Control: max-age=<초>`: 캐시 사용 가능 시간
+- 왜 설정할까?
+    - 서버 원본 데이터가 변경되면 캐시 데이터와 불일치가 발생할 수 있음 
+    → **캐시 신선도(cache freshness):얼마나 유사한지의 정도** 필요
+
+### 캐시 갱신 방식
+
+1. **날짜 기반**: `If-Modified-Since` 헤더 사용
+    - 서버 응답:
+        - 200 OK → 변경됨, 새 자원 전송
+        - 304 Not Modified → 변경 없음, 캐시 사용 가능
+        - 404 Not Found → 자원 삭제됨
+2. **엔티티 태그 기반(Etag)**: `If-None-Match` 헤더 사용
+    - 자원의 버전을 Etag로 식별
+    - 자원이 변경되어 Etag 값도 변경되었다면) 그때만 변경된 자원으로 응답하도록 서버에게 요청
+    - 서버 응답:
+        - 200 OK → Etag 불일치, 새 자원 전송
+        - 304 Not Modified → Etag 일치, 캐시 사용 가능
+        - 404 Not Found → 자원 삭제됨
+
+## 콘텐츠 협상(content negotiation)
+
+- **자원(Resource)** = URI로 식별되는 것
+- **표현(Representation)** = 송수신 가능한 자원의 구체적인 형태 (언어, 형식, 인코딩 등)
+    - 서버와 클라이언트가 HTTP 메시지를 통해 주고받는 것은 ‘자원의 표현’
+- 같은 자원도 여러 표현 가능 → 클라이언트가 원하는 표현을 선택할 수 있도록 하는 기술이 **콘텐츠 협상**
+- 주요 헤더
+    - `Accept` : 선호하는 **미디어 타입** (HTML, XML, JSON 등)
+    - `Accept-Language` : 선호하는 **언어** (ko, en 등)
+    - `Accept-Encoding` : 선호하는 **인코딩 방식** (gzip, deflate 등)
+- 클라이언트가 우선순위를 반영하여 여러 표현에 대한 선호도를 서버에 알릴 수도 있음
+    - `q` = Quality Value (0~1, 생략 시 1)
+    - 값이 클수록 우선순위가 높음
+    - ex) 한국어(ko-KR, ko), 영어(en-US, en)의 순으로 선호하며,
+     HTML과 XML, 일반 텍스트의 순 으로 선호
+        
+        ```python
+        GET /index.html HTTP/1.1
+        Host: example.com
+        Accept-Language: ko-KR,ko;q=0.9,en-US;q=0.8,en;q=0.7
+        Accept: text/html,application/xml;q=0.9,text/plain;q=0.6,*/*;q=0.5
+        ```
+        
+
+## 보안: **SSL**/**TLS**와 **HTTPS**
+
+### HTTPS
+
+> **HTTPS = HTTP + SSL/TLS** (오늘날 주로 TLS 1.2, TLS 1.3 사용)
+****목적: **암호화 + 인증**
+> 
+- SSL(Secure Sockets Layer)과 TLS(Transport Layer Security)
+    - 모두 인증과 암호화를 수행하는 프로토콜
+
+> 동작 과정
+> 
+> 1. **TCP 3-way handshake**
+> 2. **TLS handshake** (암호화 키 교환 + 인증서 검증)
+> 3. **암호화된 HTTP 메시지 송수신**
+
+### **TLS 핸드셰이크**
+
+![image.png](attachment:5d7a3a5c-f8f3-473d-a2d0-9cc4412b321a:image.png)
+
+<aside>
+💡
+
+핵심!
+1. TLS 핸드셰이크를 통해 **암호화 통신을 위한 키를 생성/교환**할 수 있다
+2. **인증서 송수신과 검증**이 이루어질 수 있다는 점입니다.
+
+</aside>
+
+1. `ClientHello`
+
+- 클라이언트 → 서버
+- 암호화 통신을 위해 협의할 정보 제시
+    - 지원되는 **TLS 버전**
+    - 사용 가능한 **암호화 알고리즘(암호 스위트)**
+    - 해시 함수 종류
+    - 키 생성을 위한 **클라이언트 난수**
+
+👉 **암호 스위트(Cipher Suite)**: 암호화 알고리즘 + 해시 함수의 조합
+
+![image.png](attachment:c7026f83-a11f-49e6-b629-5c3cb20e5c62:image.png)
+
+2. `ServerHello`
+
+- 서버 → 클라이언트
+- ClientHello에서 제시된 옵션을 **선택**하여 전달
+    - 선택된 TLS 버전
+    - 선택된 암호 스위트
+    - 키 생성을 위한 **서버 난수**
+
+👉 이 단계까지 오면 암호화 통신에 필요한 정보들이 확정됨.
+
+👉 클라이언트와 서버는 난수와 선택된 알고리즘을 기반으로 **공유 키** 생성.
+
+---
+
+1. **인증서 교환 & 검증**
+
+> 인증서==공개 키 인증서(public key certificate)
+당신이 통신을 주고받는 상대방은 틀림없이 당신이 의도한 대상이 맞다는 사실을 입증하기 위한 정보
+> 
+- 서버가 **Certificate 메시지**를 통해 인증서 전송
+    - 인증서는 “내가 진짜 이 도메인의 주인이다”를 증명
+    - 단순 자기 주장만으론 의미 없으므로 제3의 기관인 **인증 기관**(CA: Certification Authority)이 발급
+- **Certificate 메시**지: 인증서 서명 값 등의 인증서 내용이 포함
+- **CertificateVerify 메시지**: 인증서가 조작되지 않았는지 검증
+
+👉 인증서 = 신원 보증서
+
+👉 CA = 신뢰할 수 있는 제3자
+
+---
+
+1.  **Finished**
+- 클라이언트 ↔ 서버 서로 Finished 메시지를 교환
+- 이제 협의된 공유 키 기반으로 **암호화된 데이터 송수신 시작**
+- TLS 1.3에서는 Finished 메시지와 함께 Application Data(실제 암호화된 HTTP 데이터)도 전송 가능
+
+<aside>
+💡
+
+TLS 핸드셰이크는
+
+1. 클라이언트와 서버가 암호화 방식과 키를 협의(ClientHello/ServerHello)하고
+2. 서버 신원을 인증서로 검증(Certificate, CertificateVerify)한 뒤,
+3. 공유 키를 확정해 Finished 메시지를 교환함으로써 이후의 HTTP 통신을 안전하게 암호화
+</aside>
+
+# 7. 프록시와 안정적인 트래픽
+
+## 오리진 서버와 중간 서버: 포워드 프록시와 리버스 프록시
+
+- **오리진 서버 (Origin Server)**: 실제 자원을 생성하고 응답할 수 있는 서버 (최종 목적지).
+- **중간 서버**: 클라이언트와 오리진 서버 사이에 존재, 여러 역할 수행.
+    - **프록시(Forward Proxy)**
+        - 클라이언트의 대리인.
+        - 캐시, 암호화, 접근 제한 등을 담당.
+        - 클라이언트 쪽에 가까이 위치.
+    - **게이트웨이(Reverse Proxy)**
+        - 오리진 서버 앞에서 요청을 대신 받고 전달.
+        - 클라이언트 입장에서는 오리진 서버처럼 보임.
+            - 클라이언트보다 서버 쪽에 가까이 위치.
+        - 캐시 저장, 부하 분산(로드 밸런서) 기능도 수행.
+
+![image.png](attachment:c8f3785b-7601-4cfe-8369-cb6b19b978dd:image.png)
+
+## 고가용성: 로드 밸런싱과 스케일링
+
+> **가용성(Availability)** = 업타임 ÷ (업타임 + 다운타임)
+> 
+- 업타임: 정상적인 사용 시간
+- 다운타임: 정상적인 사용이 불가능한 시간
+    - 원인
+        - 과도한 트래픽, 소프트웨어 오류, 하드웨어 장애, 보안 공격, 자연재해 등
+- 목표: **99.999% (파이브 나인스)** 이상 → 연간 다운타임 약 5.26분
+- 장애를 완전히 없애는 것보다는 **문제가 발생해도 동작하도록 설계**하는 것 → **결함 감내(Fault Tolerance)**
+- 대표적인 방법: **다중화(Multiplexing)** + **자동 전환(Failover)**
+- cf) 헬스 체크와 하트비트
+    - **헬스 체크(Health Check)**: 로드 밸런서 등이 주기적으로 서버 상태 검사 (HTTP, ICMP 활용).
+    - **하트비트(Heartbeat)**: 서버 간에 주기적으로 메시지를 주고받아 정상 여부 확인.
+
+### 로드밸런싱
+
+> 다중화된 서버에 **트래픽을 고르게 분산**시켜 가용성 유지.
+> 
+> - 서버를 **다중화**(여러 대 운영)한다고 해도 트래픽이 특정 서버에 몰리면 성능 저하 발생
+> - 트래픽을 **고르게 분산**해야 **고가용성(HA, High Availability)** 확보 가능 → 이를 위해 로드 밸런싱 필요
+- 구현: **로드 밸런서**
+    - 클라이언트와 서버 사이에서 요청을 받아 여러 서버에 분산하는 역할
+    - **L4/L7 스위치, Nginx, HAProxy, Envoy 등**
+- **로드밸런싱 대표 알고리즘**
+    - **라운드 로빈(Round Robin)**: 서버를 차례대로 돌아가며 분배
+    - **최소 연결(Least Connection)**: 현재 연결 수가 가장 적은 서버에 분배
+    - **랜덤(Random)**: 임의의 서버 선택
+    - **IP 해시(IP Hash)**: 클라이언트 IP 기반으로 특정 서버에 매핑
+    - **응답 시간 기반**: 가장 빠른 서버 선택
+    - **가중치(Weight)**: 성능이 좋은 서버에 더 많은 요청 할당
+
+<aside>
+💡
+
+안정적이고 확장 가능한 서버 운영을 위해 프록시/게이트웨이 같은 중간 서버를 활용하고, 
+서버를 다중화 + 헬스 체크 + 로드 밸런싱(가중치 포함)으로 트래픽을 분산시켜 고가용성을 달성한다.
+
+</aside>
+
+### 스케일링
+
+- **스케일 업 (Scale-Up, 수직 확장)**
+    - 기존 장비를 더 좋은 사양으로 교체
+    - 장점: 단순, 빠름
+    - 단점: 한계가 있고, 비용이 급격히 올라감
+- **스케일 아웃 (Scale-Out, 수평 확장)**
+    - 서버 대수를 늘려 분산 처리
+    - 장점: 유연성, 장애 감내력↑
+    - 단점: 구성 복잡도↑
+        
+        ![image.png](attachment:6d7c615e-6c61-4cdb-b238-562a839c7aeb:image.png)
+        
+- **오토스케일링 (Auto Scaling)**
+    - 트래픽 변화에 따라 자동으로 서버 수 확장/축소
+    - 클라우드 서비스에서 기본 제공 (예: AWS, GCP, Azure)
+    - 장점: 경제적, 탄력적 자원 관리
+
+### Nginx 활용 예시
+
+> **리버스 프록시 + 로드 밸런서** 역할 수행 가능
+> 
+- 설정 예시:
+    
+    ```
+    upstream backend {
+        server 10.10.10.2:80 weight=1;
+        server 10.10.10.3:80 weight=2;
+        server 10.10.10.4:80 backup;
+    }
+    
+    server {
+        listen 80;
+        server_name localhost;
+    
+        location / {
+            proxy_pass http://backend;
+        }
+    }
+    ```
+    
+    - `weight`: 가중치 (성능 좋은 서버에 더 많은 요청 분배)
+    - `backup`: 다른 서버가 죽었을 때만 사용
+
+---
+
+### 업스트림 / 다운스트림 vs 인바운드 / 아웃바운드
+
+![image.png](attachment:f1a0de33-7de5-42a0-a1f3-4d1f918801d3:image.png)
+
+- **업스트림 (Upstream)**: 클라이언트 → 서버 방향 (요청)
+- **다운스트림 (Downstream)**: 서버 → 클라이언트 방향 (응답)
+- **인바운드 (Inbound)**: 외부 → 내부 (예: 외부 사용자가 회사 서버 접근)
+- **아웃바운드 (Outbound)**: 내부 → 외부 (예: 직원이 외부 사이트 접속)
+
+## cf) 웹 서버(Web Server) vs 웹 애플리케이션 서버(WAS)
+
+### 1. 웹 서버 (Web Server)
+
+- **정적 콘텐츠** 제공 (변하지 않는 데이터)
+    - 예: HTML, CSS, JS, 이미지, 동영상
+- 대표 소프트웨어: **Nginx, Apache HTTP Server, IIS**
+- 역할: 단순히 요청받은 파일을 찾아서 그대로 응답
+
+---
+
+### 2. 웹 애플리케이션 서버 (WAS, Web Application Server)
+
+- **동적 콘텐츠** 제공 (사용자, 시간, 상황에 따라 달라지는 데이터)
+    - 예: “안녕하세요, 민철님”, “오늘의 기온은 36.5도입니다”
+- DB 조회, 비즈니스 로직 처리, 데이터 가공 후 응답
+- 대표 소프트웨어: **Tomcat, JBoss, WebSphere**
+- *미들웨어(Middleware)**의 일종 → 운영체제(OS)와 애플리케이션(웹 프레임워크) 사이를 중개
+    - 예: Spring Boot 실행 시 Tomcat(WAS)도 함께 실행
+
+---
+
+### 3. 함께 쓰는 이유
+
+- 대부분의 웹 서비스는 **정적 + 동적 콘텐츠** 모두 필요
+- 구조:
+    - 정적 콘텐츠 → **웹 서버**에서 처리 (빠르고 효율적)
+    - 동적 콘텐츠 → **WAS**에서 처리 (복잡한 로직 담당)
+- 장점:
+    - 부하 분산 가능
+    - 확장성 ↑ (여러 애플리케이션 연동 가능)
+
+## cf) 소켓 프로그래밍
+
+### 1. 소켓의 개념
+
+- 소켓 = **네트워크 통신의 종착점(endpoint)**
+- 비유: **우체통**
+    - 송신 프로세스 → 메시지를 **소켓에 씀**
+    - 수신 프로세스 → 메시지를 **소켓에서 읽음**
+
+---
+
+### 2. 소켓과 파일의 유사성
+
+- 소켓은 운영체제에서 **특수한 파일처럼 취급**됨
+    - `write()` → 네트워크 송신
+    - `read()` → 네트워크 수신
+- 파일이 **파일 디스크립터**로 식별되듯, 소켓은 **소켓 디스크립터**로 식별됨
+- 따라서 소켓도 IPC(프로세스 간 통신)의 수단이 됨
+
+---
+
+### 3. 소켓 관련 시스템 콜
+
+- 주요 함수: `socket()`, `bind()`, `listen()`, `accept()`, `read()/recv()`, `write()/send()`
+- 실제 웹 서버(Nginx, Spring, Django 등)도 내부적으로 **소켓 시스템 콜**을 반복 실행하여 요청/응답 처리
+
+```python
+import socket
+
+# 서버 주소와 포트 지정
+SERVER_HOST = '127.0.0.1'
+SERVER_PORT = 8000
+
+# 1. 소켓 생성 (IPv4, TCP)
+server_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+# 2. 소켓 옵션 설정 (주소 재사용 가능)
+server_socket.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
+
+# 3. 소켓 바인딩 (IP + PORT)
+server_socket.bind((SERVER_HOST, SERVER_PORT))
+
+# 4. 연결 대기 (최대 1개 연결 대기)
+server_socket.listen(1)
+print('Listening on port %s ...' % SERVER_PORT)
+
+# 5. 연결 수락
+client_connection, client_address = server_socket.accept()
+
+# 6. 요청 수신 (최대 1024바이트)
+request = client_connection.recv(1024).decode()
+print(request)
+
+# 7. 응답 전송
+response = 'HTTP/1.0 200 OK\n\nThis is CS!'
+client_connection.sendall(response.encode())
+
+# 8. 연결 종료
+client_connection.close()
+server_socket.close()
+
+```
